# share

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml  initial-ghostwire-task-description.md  project_state.json
.claude/: settings.json
.claude copy/agents/: chatbot-builder.md  frontend-builder.md  integration-verifier.md  knowledge-core-builder.md  team-assembler-builder.md
.claude copy/hooks/: sdlc-hook.py
.claude copy/skills/ghostwire-schemas/: SKILL.md
.claude/agents/: contract-lead.md  feedback-builder.md
backend/: README.md  pyproject.toml
backend copy/: .env.example  Makefile  alembic.ini
backend copy/app/: config.py  contracts.py  main.py  observability.py
backend copy/tests/: assert_frozen_types.py
backend/app/: __init__.py
backend/app/chatbot/: intent.py  prompts.py  service.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0002_audit_append_only.py  0003_audit_append_only_trigger.py
backend/app/feedback/: __init__.py  service.py
backend/app/knowledge_core/: feedback.py  ingest.py
backend/app/routers/: chat.py
backend/app/shared_security/: audit.py  auth.py
backend/app/team_assembler/: __init__.py  scoring.py
backend/tests/: smoke.py
docs/: PLAN.md  RESEARCH.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
system/contracts/: openapi.yaml  project_state.schema.json
system/scripts/: validate_contracts.py
system/seed/: employees.json  project_requirements.json  public_docs.json  reviews.json
(+36 files in other folders)
